@startuml package

note as n1
    Si evidenziano in rosa i package che sono 
    cambiati dalla versione precedente
end note

package controller #Pink{
    interface Action{}
    class Option{}
    class OptionList{}
    Option <--o OptionList
    Option ..> Action
}

package model{
    package user {}
    package gerarchia{}
    package scambio {}
    package offerta #Pink{}
}
package db #Pink{
    class DbConnect {}
    class JsonUtil{}
    class MyMenu{}
    class InputDati{}
}



controller ..> model: use
controller ..> db: use

@enduml